Improve debugging when unable to parse EXIF coordinate strings and improve error reporting in deleteOldest for tiles.